# Python_review

./: .gitignore  AGENTS.md  README.md
2026-review/: IO.py  advanced.py  async-io.py  basic.py  decorator-and-closure.md  error-debug-test.md  function.py  functional.py  main.py  objective.py  oop-advanced.py  pillow.py  process-thread.py  pyproject.toml  python-concurrency.md  requests_demo.py
2026-review/assets/: test.txt
2026-review/models/: __init__.py  student.py
2026-review/module/: __init__.py  abc.py
2026-review/object/: __init__.py  animal.py  plant.py  student.py  teacher.py
agent-app/: main.py  pyproject.toml
agent-app/graph/: email_graph.py
agent-app/nodes/: email_nodes.py
agent-app/state/: email_state.py
agent-app/tests/: test_main_api.py
agent-app/utils/: __init__.py  config.py  utils.py
