[project]
name = "agent-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "langchain-core>=1.3.0",
    "langchain-openai>=1.2.0",
    "langgraph>=1.1.9",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "uvicorn>=0.46.0",
]
